data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000235_cfd3944e-e0d8-444a-8eb3-6b32a5a5ccee.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: cfd3944e-e0d8-444a-8eb3-6b32a5a5ccee
- repo: astropy/astropy
- instance_id: astropy__astropy-12907
- base_commit: d16bfe05a744909de4b27f5875fe0d4ed41ce607
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
Modeling's `separability_matrix` does not compute separability correctly for nested CompoundModels
Consider the following model:

```python
from astropy.modeling import models as m
from astropy.modeling.separable import separability_matrix

cm = m.Linear1D(10) & m.Linear1D(5)
```

It's separability matrix as you might expect is a diagonal:

```python
>>> separability_matrix(cm)
array([[ True, False],
       [False,  True]])
```

If I make the model more complex:
```python
>>> separability_matrix(m.Pix2Sky_TAN() & m.Linear1D(10) & m.Linear1D(5))
array([[ True,  True, False, False],
       [ True,  True, False, False],
       [False, False,  True, False],
       [False, False, False,  True]])
```

The output matrix is again, as expected, the outputs and inputs to the linear models are separable and independent of each other.

If however, I nest these compound models:
```python
>>> separability_matrix(m.Pix2Sky_TAN() & cm)
array([[ True,  True, False, False],
       [ True,  True, False, False],
       [False, False,  True,  True],
       [False, False,  True,  True]])
```
Suddenly the inputs and outputs are no longer separable?

This feels like a bug to me, but I might be missing something?

FILES INSPECTED
---------------
- astropy/modeling/separable.py [Read: 2]
- astropy/modeling/tests/test_separable.py [Read: 1]
- astropy/__init__.py [Read: 1]

SEARCH ANCHORS
--------------
(none)

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [diagnostic] cd ./swebench_9_15/testbed && find . -name "separable.py" -type f | head -5
- [diagnostic] ls -la testbed 2>&1 | head -20
- [diagnostic] find . -name "separable.py" -type f
- [test] python test_issue.py
- [other/reproduction] python --version
- [other/reproduction] python3 --version
- [test] python3 test_issue.py
- [diagnostic] find . -path "*/tests/*" -name "*separable*" -type f | head -5
- [other/reproduction] python3 -c "import sys; sys.path.insert(0, '.'); from astropy.modeling import models; print('Success')" 2>&1 | head -20
- [test] python3 test_fix.py
- [test] python3 standalone_test.py 2>&1 | head -100
- [other/reproduction] python3 verify_fix.py

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):
- ImportError: cannot import name '_compiler' from 'astropy.utils' (./astropy/utils/__init__.py)

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Diagnostic Output after action #3]
  ./astropy/modeling/separable.py
- [Read Result after action #5]
       1→# Licensed under a 3-clause BSD style license - see LICENSE.rst
       2→
       3→"""
       4→Functions to determine if a model is separable, i.e.
       5→if the model outputs are independent.
       6→
       7→It analyzes ``n_inputs``, ``n_outputs`` and the operators
       8→in a compound model by stepping through the transforms
       9→and creating a ``coord_matrix`` of shape (``n_outputs``, ``n_inputs``).
      10→
      11→
      12→Each modeling operator is represented by a function which
      13→takes two simple models (or two ``coord_matrix`` arrays) and
      14→returns an array of shape (``n_outputs``, ``n_inputs``).
      15→
      16→"""
      17→
      18→import numpy as np
      19→
      20→from .core import Model, ModelDefinitionError, CompoundModel
      21→from .mappings import Mapping
      22→
      23→
      24→__all__ = ["is_separable", "separability_matrix"]
      25→
      26→
      27→def is_separable(transform):
      28→    """
      29→    A separability test for the outputs of a transform.
      30→
      31→    Parameters
      32→    ----------
      33→    transform : `~astropy.modeling.core.Model`
      34→        A (compound) model.
      35→
      36→    Returns
      37→    -------
      38→    is_separabl
  [... truncated ...]
- [Test Output after action #7]
  Exit code 1
    File "test_issue.py", line 11
      print(f"separability_matrix(m.Linear1D(10) & m.Linear1D(5)):")
                                                                  ^
  SyntaxError: invalid syntax
- [Read Result after action #14]
     219→def _cstack(left, right):
     220→    """
     221→    Function corresponding to '&' operation.
     222→
     223→    Parameters
     224→    ----------
     225→    left, right : `astropy.modeling.Model` or ndarray
     226→        If input is of an array, it is the output of `coord_matrix`.
     227→
     228→    Returns
     229→    -------
     230→    result : ndarray
     231→        Result from this operation.
     232→
     233→    """
     234→    noutp = _compute_n_outputs(left, right)
     235→
     236→    if isinstance(left, Model):
     237→        cleft = _coord_matrix(left, 'left', noutp)
     238→    else:
     239→        cleft = np.zeros((noutp, left.shape[1]))
     240→        cleft[: left.shape[0], : left.shape[1]] = left
     241→    if isinstance(right, Model):
     242→        cright = _coord_matrix(right, 'right', noutp)
     243→    else:
     244→        cright = np.zeros((noutp, right.shape[1]))
     245→        cright[-right.shape[0]:, -right.shape[1]:] = 1
     246→
     247→    return np.hstack([cleft, cright])
     248→

- [Diagnostic Output after action #17]
  ./astropy/modeling/tests/test_separable.py
- [Read Result after action #19]
       1→# Licensed under a 3-clause BSD style license - see LICENSE.rst
       2→"""
       3→Test separability of models.
       4→
       5→"""
       6→# pylint: disable=invalid-name
       7→import pytest
       8→import numpy as np
       9→from numpy.testing import assert_allclose
      10→
      11→from astropy.modeling import custom_model, models
      12→from astropy.modeling.models import Mapping
      13→from astropy.modeling.separable import (_coord_matrix, is_separable, _cdot,
      14→                                        _cstack, _arith_oper, separability_matrix)
      15→from astropy.modeling.core import ModelDefinitionError
      16→
      17→
      18→sh1 = models.Shift(1, name='shift1')
      19→sh2 = models.Shift(2, name='sh2')
      20→scl1 = models.Scale(1, name='scl1')
      21→scl2 = models.Scale(2, name='scl2')
      22→map1 = Mapping((0, 1, 0, 1), name='map1')
      23→map2 = Mapping((0, 0, 1), name='map2')
      24→map3 = Mapping((0, 0), name='map3')
      25→rot = models.Rotation2D(2, name='rotation')
      26→p2 = models.Polynomial2D(1, name='p2')
      27→p22 = models.Polynomial2D(2, name='p22')
      28→p1 = models.Polynomial1D(1, name='p1')
      29→
      30→
      31→compound_models = {
      32→    'cm1': (
  [... truncated ...]

SOURCE EDIT EVIDENCE
--------------------
- astropy/modeling/separable.py
  Tool: Edit action #16
  old_text_sha256: 40ba22741df143eea4c3855976bcf56acdd71272f33a3737284fb71cdbd0c85a
  new_text_sha256: 379a5858b4062623cac0b0e33e5603f8d5deb3f3a21e64394c44c1cc7e7d2344
- verify_fix.py
  Tool: Write action #29
  new_text_sha256: 412f0fc6012cd5d49faaca1c5c70f4dc6c092ecc81ec99b3d15e9e5113aa332d
- astropy/modeling/tests/test_separable.py
  Tool: Edit action #21
  old_text_sha256: 947be422de03f11adf144db1f93192dedd6bf6bbb8d3b0732f3064b3403e0b18
  new_text_sha256: a846480b6a6e12a136fd2c1c675eb5fa68b12e4461821fe1d409a65b1be385d4
- test_fix.py
  Tool: Write action #24
  new_text_sha256: aa1152062a43b29fe37150c220cbe0679eb8f6588091cc4c395315c9be8d2ae6
- standalone_test.py
  Tool: Write action #27
  new_text_sha256: 0b53562f7f856381708c3e398dc3f29e0b494211824e2bb46d2489045f1bc0fe

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
